--- a/style.css
+++ b/style.css
@@ -119,7 +119,28 @@
     box-shadow: 0 -10px 0 0 var(--clr);
 }
 
+.nave ul li:nth-child(1).active ~ .indicador {
+    transform: translateX(calc(70px * 0));
+}
 
 
+.nave ul li:nth-child(2).active ~ .indicador {
+    transform: translateX(calc(70px * 1));
+}
+
+
+.nave ul li:nth-child(3).active ~ .indicador {
+    transform: translateX(calc(70px * 2));
+}
+
+
+.nave ul li:nth-child(4).active ~ .indicador {
+    transform: translateX(calc(70px * 3));
+}
+
+
+.nave ul li:nth-child(5).active ~ .indicador {
+    transform: translateX(calc(70px * 4));
+}
 
 
