--- a/style.css
+++ b/style.css
@@ -143,4 +143,33 @@
     transform: translateX(calc(70px * 4));
 }
 
+i {
+    position: absolute;
+    height: 200px;
+    background: linear-gradient(transparent, #fff);
+    z-index: 666;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    animation: lluvia 5s linear infinite;
+}
 
+i:nth-child(3n+1) {
+    background: linear-gradient(transparent, rgb(14, 168, 168));
+}
+
+i:nth-child(3n+2) {
+    background: linear-gradient(transparent, rgb(146, 235, 146));
+}
+
+i:nth-child(3n+3) {
+    background: linear-gradient(transparent, rgb(214, 158, 36));
+}
+
+@keyframes lluvia {
+    0% {
+        transform: translateY(-200px);
+    }
+    100% {
+        transform: translateY(calc(100vh + 200px));
+    }
+}
